added workflow yaml file